--- a/style.css
+++ b/style.css
@@ -1,63 +1,69 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #3498db;
+    font-family: 'Arial', sans-serif;
+    background-color: #1F6E8C;
+    font-size: 25px;
     margin: 0;
+    padding: 0;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     height: 100vh;
 }
 
-.container {
-    text-align: center;
-    padding: 20px;
+#container {
+    background-color: #2E8A99;
     border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-    overflow: hidden;
-    max-width: 400px;
-    width: 100%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: center;
 }
 
-h1 {
-    color: #3498db;
-}
-
-p {
-    color: #555;
+header {
+    text-align: center;
+    font-size: 25px;
+    color: #070F2B;
     margin-bottom: 20px;
 }
 
-.city-input {
-    width: 80%;
-    padding: 10px;
+#weatherForm {
+    margin-bottom: 20px;
+}
+
+input {
+    width: 350px;
+    height: 42px;
+    padding: 5px;
+    font-size: 20px;
+    box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin-bottom: 20px;
-    font-size: 16px;
+    margin-right: 10px;
 }
 
-.explore-btn {
-    background-color: #2ecc71;
-    color: #fff;
-    padding: 10px 20px;
+button {
+    width: 140px;
+    height: 42px;
+    font-size: 20px;
+    background-color: #84A7A1;
+    color: black;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 18px;
-    transition: background-color 0.3s ease;
 }
 
-.explore-btn:hover {
+.button:hover {
     background-color: #27ae60;
 }
 
-.weather-icon {
-    font-size: 48px;
+h1 {
     margin-bottom: 10px;
 }
 
-.weather-info {
-    color: #333;
-    font-size: 18px;
+header > p {
+    font-size: 20px;
+    color: rgba(0, 0, 0, .85);
+}
+
+p {
+    margin: 5px 0;
 }
