I added margin-bottom on input tag in media query max-width: 550px

--- a/style.css
+++ b/style.css
@@ -67,3 +67,10 @@ header > p {
 p {
     margin: 5px 0;
 }
+
+@media screen and (max-width: 550px){
+    input{
+        margin-bottom: 20px;
+    }
+    
+}
