--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 #container {
     background-color: #2E8A99;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.8);
     padding: 20px;
     text-align: center;
 }
@@ -51,8 +51,8 @@ button {
     cursor: pointer;
 }
 
-.button:hover {
-    background-color: #27ae60;
+button:hover{
+    background-color: rgba(255, 255, 255, .75);
 }
 
 h1 {
@@ -69,7 +69,7 @@ p {
 }
 
 @media screen and (max-width: 550px){
-    input{
+    #city-input{
         margin-bottom: 20px;
     }
     
