--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: "Rubik", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
     background-color: #1F6E8C;
     font-size: 25px;
     margin: 0;
